[tool.poetry]
name = "prometheus"
version = "0.1.0"
description = ""
authors = ["Quésia Santos <quesia.santos@olist.com>"]

[tool.poetry.dependencies]
python = "^3.9"
prometheus-client = "^0.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
